--- a/projects/Natours/sass/base/_base.scss
+++ b/projects/Natours/sass/base/_base.scss
@@ -7,6 +7,8 @@
 }
 
 html {
+  overflow-x: hidden;
+
   // Font Size set to 100% for html to use with media quries
   font-size: 100%;
 
