--- a/projects/Natours/sass/base/_typography.scss
+++ b/projects/Natours/sass/base/_typography.scss
@@ -61,11 +61,7 @@ body {
   letter-spacing: 2px;
 
   @include respond(tab-port) {
-    font-size: 1.875rem;
-  }
-
-  @include respond(phone) {
-    font-size: 1.5625rem;
+    font-size: 1.75rem;
   }
 
   &:hover {
@@ -75,7 +71,7 @@ body {
 }
 
 .heading-tertiary {
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 700;
   text-transform: uppercase;
 }
