--- a/projects/Natours/sass/base/_utilities.scss
+++ b/projects/Natours/sass/base/_utilities.scss
@@ -16,6 +16,10 @@
 
 .u-margin-bottom-big {
   margin-bottom: 7rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 5rem !important;
+  }
 }
 
 .u-margin-top-big {
